--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "enov-bulma",
+  "name": "wedding.kaotik.cr",
   "version": "1.0.0",
-  "description": "enov free bulma business template",
-  "author": "Themefisher",
-  "license": "MIT",
+  "description": "Kaotik wedding website template",
+  "author": "kaotik.cr",
   "scripts": {
     "dev": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "deploy": "s3-deploy  './dist/**' --cwd './dist/' --region us-east-1 --bucket wedding.kaotik.cr --distId E3MFHQ2DS164YV ",
+    "release": "npm run build; npm run deploy;"
   },
   "dependencies": {
     "browser-sync": "^2.27.10",
@@ -21,6 +22,7 @@
     "gulp-util": "^3.0.8",
     "jshint": "^2.13.4",
     "jshint-stylish": "^2.2.1",
+    "s3-deploy": "^1.4.0",
     "sass": "^1.53.0"
   }
 }
