--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "release": "npm run build; npm run deploy;"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "browser-sync": "^2.27.10",
+    "bulma": "^0.9.4",
+    "bulma-timeline": "^3.0.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-file-include": "^2.3.0",
